# ark-cosmetic-whitelist-generator

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: pylint.yml  release.yml
ark_cosmetic_whitelist_generator/: main.py
